--- a/static/main.css
+++ b/static/main.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     margin: 0;
     padding: 0;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -47,4 +47,4 @@ body {
   .menu li a {
     color: #fff;
     text-decoration: none;
-  }
+  } */
