--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,32 @@
 {%extends "layout.html"%}
 {% block content %}
 <div class="home">
-     <h1>Turn & Gof</h1>
-     <p>This is a test website. Bobs for life.</p>
+  <table>
+    <thead>
+      <tr>
+          <th>Name</th>
+          <th>Item Name</th>
+          <th>Item Price</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr>
+        <td>Alvin</td>
+        <td>Eclair</td>
+        <td>$0.87</td>
+      </tr>
+      <tr>
+        <td>Alan</td>
+        <td>Jellybean</td>
+        <td>$3.76</td>
+      </tr>
+      <tr>
+        <td>Jonathan</td>
+        <td>Lollipop</td>
+        <td>$7.00</td>
+      </tr>
+    </tbody>
+  </table>
 <div>
 {%endblock%}
