--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,21 +3,18 @@
     <head>
         <title>Gof</title>
         <link rel="stylesheet" href="{{url_for('static',filename='main.css')}}">
+    <!-- Compiled and minified CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     </head>
     <body>
-        <header>
-            <div class="container">
-                <strong><nav>
-                    <ul class="menu">
-                        <li><a href="{{url_for('home')}}">Home</a></li>
-                        <li><a href="{{url_for('about')}}">About</a></li>
-                    </ul>
-                </nav></strong>
-            </div>
-        </header>
         <div class="container">
             {%block content%}
             {%endblock%}
         </div>
     </body>
 </html>
+
+<!--<li><a href="{{url_for('home')}}">Home</a></li>-->
