--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,8 @@
 {%extends "layout.html"%}
 {% block content %}
-<div class="login">
-  <h1>
-    <center>Gof App</center>
-    </h1>
+<div class="login center-align">
+  <h1><strong>Gof App</strong></h1>
+  <h5>Login</h5>
   <div class="row">
     <form class="col s12">
       <div class="row">
@@ -15,9 +14,18 @@
           <input placeholder="Password" id="password" type="password" class="validate">
           <label for="password">Password</label>
         </div>
-        </div>
+      </div>
+      <div class="row">
+        <button class="btn waves-effect waves-light col s2 offset-s5" type="submit" name="action">Login
+          <i class="material-icons right"></i>
+        </button>
+      </div>
+      <div class="row">
+        <button class="btn waves-effect waves-light col s2 offset-s5" type="submit" name="action">Sign-up
+          <i class="material-icons right"></i>
+        </button>
       </div>
     </form>
   </div>
-<div>
+</div>
 {%endblock%}
