--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="row center-align">
     <h1><strong>Gof App</strong></h1>
-    <p>Thank you for signing up!</p>
+    <h5>Thank you for signing up!</h5>
     <div class="row">
         <button class="btn waves-effect waves-light col s4 offset-s4" type="submit" name="action">Return to Home
             <i class="material-icons right"></i>
